/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package com.crsystem.common.enums;

/**
 *
 * @author wonsik
 */
public enum Role {
    ADMIN,
    ASSISTANT,
    PROFESSOR,
    STUDENT
}
